--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,6 @@ name: Deploy Base Images
 on:
   push:
     branches: [ master ]
-env:
-  date: echo $(date +%s)
 jobs:
   build:
     name: Build 
@@ -15,11 +13,11 @@ jobs:
     - name: Docker Login
       run: docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
     - name: Build CPU Base 
-      run: docker build -t deepquestai/deepstack:cpu-${{ env.date }} . -f Dockerfile.cpu
+      run: docker build -t deepquestai/deepstack:cpu-${{ github.ref }} . -f Dockerfile.cpu
     - name: Build GPU Base
-      run: docker build -t deepquestai/deepstack:gpu-${{ env.date }} . -f Dockerfile.gpu
+      run: docker build -t deepquestai/deepstack:gpu-${{ github.ref }} . -f Dockerfile.gpu
     - name: Push CPU Base
-      run: docker push deepquestai/deepstack:cpu-${{ env.date }}
+      run: docker push deepquestai/deepstack:cpu-${{ github.ref }}
     - name: Push GPU Base
       run: docker push deepquestai/deepstack:gpu-${{ env.date }}
       
