--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,7 +1,9 @@
-FROM python:3.8
+FROM python:3.6
 
 RUN apt-get update -y
 RUN apt-get install redis-server -y 
 RUN pip3 install --upgrade setuptools pip
 RUN apt-get install libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg openmpi-bin libopenmpi-dev -y
-RUN pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
+RUN wget https://nvidia.box.com/shared/static/9eptse6jyly1ggt9axbja2yrmj6pbarc.whl -O torch-1.6.0-cp36-cp36m-linux_aarch64.whl
+RUN pip install torch-1.6.0-cp36-cp36m-linux_aarch64.whl
+RUN rm torch-1.6.0-cp36-cp36m-linux_aarch64.whl
