--- a/Dockerfile.gpu-10_2
+++ b/Dockerfile.gpu-10_2
@@ -3,7 +3,7 @@ FROM nvidia/cuda:10.2-cudnn8-runtime-ubuntu16.04
 RUN apt-get update -y
 RUN apt install software-properties-common -y
 RUN add-apt-repository ppa:deadsnakes/ppa -y
-RUN apt update -y
+RUN apt-get update -y
 RUN apt-get install python3.7 -y
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 0
 RUN apt-get install python3-pip -y
