--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,8 @@
 name: Deploy Base Images
 on:
-  push:
-    branches: [ master ]
+  pull_request:
+    branches:
+      - master
 jobs:
   build:
     name: Build 
