--- a/Dockerfile.gpu-11_6
+++ b/Dockerfile.gpu-11_6
@@ -1,10 +1,7 @@
 FROM nvidia/cuda:11.6.1-cudnn8-runtime-ubuntu18.04
 
 RUN apt-get update -y
-RUN apt install software-properties-common -y
-RUN add-apt-repository ppa:deadsnakes/ppa -y
-RUN add-apt-repository ppa:jonathonf/python-3.7 -y
-RUN apt-get update -y
+RUN apt-get install build-essential libpq-dev libssl-dev OpenSSL libffi-dev zlib1g-dev
 RUN apt-get install python3.7 -y
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 0
 RUN apt-get install python3-pip -y
