--- a/Dockerfile.gpu-10_0
+++ b/Dockerfile.gpu-10_0
@@ -1,7 +1,9 @@
 FROM nvidia/cuda:10.0-cudnn7-runtime-ubuntu18.04
 
+RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
+
 RUN apt-get update -y
-RUN apt-get install build-essential libpq-dev libssl-dev OpenSSL libffi-dev zlib1g-dev
+RUN apt-get install build-essential libpq-dev libssl-dev OpenSSL libffi-dev zlib1g-dev -y
 RUN apt-get install python3.7 -y
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 0
 RUN apt-get install python3-pip -y
