--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -1,7 +1,11 @@
 FROM python:3.7
 
-RUN apt-get update -y 
-RUN apt-get install redis-server -y 
-RUN pip3 install --upgrade setuptools pip
-RUN apt-get install libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg -y
-RUN pip3 install torch==1.10.1+cpu torchvision==0.11.2+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
+ENV TORCH=1.10.1+cpu \
+    TORCHVISION=0.11.2+cpu
+
+RUN rm -rf /etc/apt/apt.conf.d/docker-gzip-indexes \
+    && apt-get update -y \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y redis-server libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg \
+    && pip3 install --no-cache-dir --upgrade setuptools pip \
+    && pip3 install --no-cache-dir torch==${TORCH} torchvision==${TORCHVISION} -f https://download.pytorch.org/whl/cpu/torch_stable.html \
+    && rm -rf /var/lib/apt/lists/* && apt-get --purge -y autoremove
