--- a/Dockerfile.gpu-jetpack
+++ b/Dockerfile.gpu-jetpack
@@ -1,6 +1,7 @@
 FROM nvcr.io/nvidia/l4t-pytorch:r32.4.4-pth1.6-py3
 
-RUN apt-get update -y
-RUN apt-get install redis-server -y 
-RUN pip3 install --upgrade setuptools pip
-RUN apt-get install libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg openmpi-bin libopenmpi-dev -y
+RUN rm -rf /etc/apt/apt.conf.d/docker-gzip-indexes \
+    && apt-get update -y \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y redis-server libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg openmpi-bin libopenmpi-dev \
+    && pip3 install --no-cache-dir --upgrade setuptools pip \
+    && rm -rf /var/lib/apt/lists/* && apt-get --purge -y autoremove
