--- a/Dockerfile.gpu-11_0
+++ b/Dockerfile.gpu-11_0
@@ -2,13 +2,12 @@ FROM nvidia/cuda:11.0.3-cudnn8-runtime-ubuntu18.04
 
 RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
 
-RUN apt-get update -y
-RUN apt install software-properties-common -y
-RUN add-apt-repository ppa:deadsnakes/ppa -y
-RUN apt install python3.7 -y
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 0
-RUN apt-get install python3-pip -y
-RUN apt-get install redis-server -y 
-RUN pip3 install --upgrade setuptools pip
-RUN apt-get install libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg -y
-RUN pip3 install torch torchvision -f https://download.pytorch.org/whl/cu110/torch_stable.html
+RUN rm -rf /etc/apt/apt.conf.d/docker-gzip-indexes \
+    && apt-get update \
+    && apt-get install -y software-properties-common \
+    && add-apt-repository ppa:deadsnakes/ppa -y \
+    && DEBIAN_FRONTEND=noninteractive apt-get install python3.7 python3-pip redis-server libsm6 libxext6 libxrender1 libglib2.0-0 ffmpeg -y \
+    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 0 \
+    && pip3 install --no-cache-dir --upgrade setuptools pip \
+    && pip3 install --no-cache-dir torch torchvision -f https://download.pytorch.org/whl/cu115/torch_stable.html \
+    && rm -rf /var/lib/apt/lists/* && apt-get --purge -y autoremove
